Feature api test (#95)
* new api end point

* comit 1

* all issues like reliability and maintaibility fixed